# spurlock

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
src/config/: ml.yml  paths.py  privileged_groups.yml  utils.py
src/data/: 01_wrangling.py  02_cleaning.py  03_create_categories.py  04_analysis.py  UKBiobank_scraper.py  loading.py  utils.py
src/fairness/: 01_data_bias.py  02_model_fairness.py  03_mitigation_inprocessing.py  04_mitigation_postprocessing.py  utils.py
src/ml/: 01_model_selection.py  01a_custom_model_train.py  02_model_analysis.py  ml_models.py  utils.py
src/visualization/: data.py  fairness.py  ml.py
