[tool.poetry]
name = "spurlock"
version = "0.1.0"
description = ""
authors = ["Claudia Herron Mulet <clherrom12@alumnes.ub.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.16.0,<1.24"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
catboost = "^1.1.1"
scikit-learn = "^1.2.1"
imblearn = "^0.0"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
xgboost = "^1.7.4"
black = "^23.1.0"
pre-commit = "^3.3.1"
missingno = "^0.5.2"
aif360 = "^0.5.0"
tempeh = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
